<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">4Q Planner</string>
    <string name="action_add_todo">Add</string>
    <string name="action_delete_todo">Delete</string>
    <string name="first_quadrant_heading">Urgent and Important</string>
    <string name="second_quadrant_heading">Not Urgent, Import</string>
    <string name="third_quadrant_heading">Urgent, Not Import</string>
    <string name="fourth_quadrant_heading">Not Urgent or Import</string>
    <string name="to_do_hint_text">Create todo item&#8230;</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="q1_radio_box">Q1</string>
    <string name="q2_radio_box">Q2</string>
    <string name="q3_radio_box">Q3</string>
    <string name="q4_radio_box">Q4</string>
    <string name="delete_ticked">Delete All %d Ticked Todos?</string>
    <string name="importance_bar">\u0020 \nI\nm\np\no\nr\nt\na\nn\nc\ne\n \u0020</string>
	<string name="urgency_bar">Urgency</string>
	<string name="more">more</string>
	<string name="less">less</string>
	<string name="vertical_more">m\no\nr\ne</string>
	<string name="vertical_less">l\ne\ns\ns</string>
	<string name="action_about">About</string>
	<string name="about_explanation">
	4Q Planner provides a way for you to organise your life based on the
	recommendations in Stephen R. Covey\'s influential book \"The 7 Habits of Highly
	Effective People ©\". He recommends that we should always strive to
	do our work when it is in Quadrant 2 (top right) - it is important work but we 
	still have time to do it properly.
	\n\n
	4QPlanner© created by\n
	John O\'Halloran 2014.
	</string>
	
</resources>
