<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <EditText
        android:id="@+id/todo_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:cursorVisible="false"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:hint="@string/to_do_hint_text" />	
    
   	<RadioGroup
        android:id="@+id/quadrant_radio_group"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
	    <RadioButton
	        android:id="@+id/quadrant_radio1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="16dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginBottom="4dp"
	        android:text="@string/q1_radio_box" />
	    
	    <RadioButton
	        android:id="@+id/quadrant_radio2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="16dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginBottom="4dp"
	        android:checked="true"
	        android:text="@string/q2_radio_box" />
	    
	    <RadioButton
	        android:id="@+id/quadrant_radio3"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="16dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginBottom="4dp"
	        android:text="@string/q3_radio_box" />
	    
	    <RadioButton
	        android:id="@+id/quadrant_radio4"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="16dp"
	        android:layout_marginLeft="4dp"
	        android:layout_marginRight="4dp"
	        android:layout_marginBottom="4dp"
	        android:text="@string/q4_radio_box" />
	</RadioGroup>
	
    
</LinearLayout>